# sphinx-issues-minimal

./: pyproject.toml
source/: bugs.rst  builtins.rst  conf.py  index.rst  umath.rst
src/bugs/: __init__.py
src/ubuiltins/: __init__.py
