[tool.poetry]
name = "doctest"
version = "0.1.0"
description = ""
authors = ["Laurens Valk <laurens@pybricks.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
doc8 = "^0.10.1"
flake8 = "^4.0.1"
black = "^22.1.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
